--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 
     <groupId>fish.payara.extras</groupId>
     <artifactId>payara-upgrade-tool</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>1.3</version>
     <packaging>glassfish-jar</packaging>
     <name>Payara Upgrade Tool</name>
 
@@ -55,7 +55,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <payara.version>5.36.0-SNAPSHOT</payara.version>
+        <payara.version>5.36.0</payara.version>
     </properties>
 
 
