--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,17 @@
 
     <pluginRepositories>
         <pluginRepository>
+            <id>payara-nexus</id>
+            <name>Payara Public Artifacts</name>
+            <url>https://nexus.payara.fish/repository/payara-artifacts/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
             <releases>
                 <enabled>true</enabled>
             </releases>
