--- a/pom.xml
+++ b/pom.xml
@@ -63,12 +63,12 @@
         <repository>
             <id>payara-nexus-enterprise-artifacts</id>
             <name>Payara Enterprise Private Artifacts</name>
-            <url>https://nexus.payara.fish/repository/payara-enterprise-artifacts-private</url>
+            <url>https://nexus.dev.payara.fish/repository/payara-enterprise-artifacts-private</url>
         </repository>
         <repository>
             <id>payara-nexus</id>
             <name>Payara Public Artifacts</name>
-            <url>https://nexus.payara.fish/repository/payara-artifacts/</url>
+            <url>https://nexus.dev.payara.fish/repository/payara-artifacts/</url>
         </repository>
     </repositories>
 
@@ -76,11 +76,11 @@
     <distributionManagement>
         <repository>
             <id>payara-nexus-enterprise-distributions</id>
-            <url>https://nexus.payara.fish/repository/payara-enterprise/</url>
+            <url>https://nexus.dev.payara.fish/repository/payara-enterprise/</url>
         </repository>
         <snapshotRepository>
             <id>payara-nexus-enterprise-snapshots</id>
-            <url>https://nexus.payara.fish/repository/payara-enterprise-snapshots-private/</url>
+            <url>https://nexus.dev.payara.fish/repository/payara-enterprise-snapshots-private/</url>
         </snapshotRepository>
     </distributionManagement>
 
